[package]
name = "portage-atom-resolvo"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.1"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
license = "MIT"
description = "Bridge between portage-atom and the resolvo dependency solver"
repository = "https://github.com/lu-zero/portage-atom"

[dependencies]
portage-atom = "0.1.1"
resolvo = "0.10.2"
